[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/ui/hero_turn_gui.gd" type="Script" id=1]

[sub_resource type="InputEventKey" id=3]
scancode = 77

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=1]
scancode = 65

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=5]
scancode = 83

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=7]
scancode = 73

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventKey" id=9]
scancode = 82

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[node name="HeroTurnGUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Backdrop" type="ColorRect" parent="."]
anchor_top = 0.875
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 75.0
margin_bottom = 75.0
color = Color( 0.862745, 0.552941, 0.152941, 0.501961 )

[node name="ButtonGrid" type="GridContainer" parent="Backdrop"]
anchor_left = 0.005
anchor_top = 0.05
anchor_right = 0.995
anchor_bottom = 0.95
margin_left = -0.02
margin_top = 2.60002
margin_right = -0.0200195
margin_bottom = 2.60002
columns = 7

[node name="Move" type="Button" parent="Backdrop/ButtonGrid"]
margin_right = 141.0
margin_bottom = 63.0
focus_neighbour_right = NodePath("../Attack")
focus_next = NodePath("../Attack")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 4 )
text = "Move"
__meta__ = {
"_editor_description_": "Scancode 77 = M"
}

[node name="Attack" type="Button" parent="Backdrop/ButtonGrid"]
margin_left = 145.0
margin_right = 286.0
margin_bottom = 63.0
focus_neighbour_left = NodePath("../Move")
focus_neighbour_right = NodePath("../Skill")
focus_next = NodePath("../Skill")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 2 )
text = "Attack"
__meta__ = {
"_editor_description_": "Scancode 65 = A"
}

[node name="Skill" type="Button" parent="Backdrop/ButtonGrid"]
margin_left = 290.0
margin_right = 431.0
margin_bottom = 63.0
focus_neighbour_left = NodePath("../Attack")
focus_neighbour_right = NodePath("../Interact")
focus_next = NodePath("../Interact")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 6 )
text = "Skill"
__meta__ = {
"_editor_description_": "Scancode 83 = S"
}

[node name="Interact" type="Button" parent="Backdrop/ButtonGrid"]
margin_left = 435.0
margin_right = 576.0
margin_bottom = 63.0
focus_neighbour_left = NodePath("../Skill")
focus_neighbour_right = NodePath("../Rest")
focus_next = NodePath("../Rest")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 8 )
text = "Interact"
__meta__ = {
"_editor_description_": "Scancode 73 = I"
}

[node name="Rest" type="Button" parent="Backdrop/ButtonGrid"]
margin_left = 580.0
margin_right = 721.0
margin_bottom = 63.0
focus_neighbour_left = NodePath("../Interact")
focus_neighbour_right = NodePath("../Revive")
focus_next = NodePath("../Revive")
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut = SubResource( 10 )
text = "Rest"
__meta__ = {
"_editor_description_": "Scancode 82 = R"
}

[node name="Revive" type="Button" parent="Backdrop/ButtonGrid"]
margin_left = 725.0
margin_right = 866.0
margin_bottom = 63.0
focus_neighbour_left = NodePath("../Rest")
focus_neighbour_right = NodePath("../EndTurn")
focus_next = NodePath("../EndTurn")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Revive"

[node name="StandUp" type="Button" parent="Backdrop/ButtonGrid"]
visible = false
margin_top = 35.0
margin_right = 141.0
margin_bottom = 66.0
focus_neighbour_right = NodePath("../EndTurn")
focus_next = NodePath("../EndTurn")
focus_previous = NodePath("../EndTurn")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "EndTurn"

[node name="EndTurn" type="Button" parent="Backdrop/ButtonGrid"]
margin_left = 870.0
margin_right = 1011.0
margin_bottom = 63.0
focus_neighbour_left = NodePath("../Revive")
focus_next = NodePath("../Move")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "EndTurn"

[node name="Tween" type="Tween" parent="."]

[node name="Show" type="Button" parent="."]
visible = false
margin_left = 96.0
margin_top = 104.0
margin_right = 192.0
margin_bottom = 160.0
text = "Show"

[node name="Hide" type="Button" parent="."]
visible = false
margin_left = 208.0
margin_top = 104.0
margin_right = 304.0
margin_bottom = 160.0
text = "Hide"

[connection signal="pressed" from="Show" to="." method="show_gui"]
[connection signal="pressed" from="Hide" to="." method="hide_gui"]
